--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,14 @@ spring.datasource.driver-class-name=org.h2.Driver
 
 
 
+#Connection to Mysql database
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=jdbc:mysql://localhost:3306/STACKROUTE
+spring.datasource.username=root
+spring.datasource.password=Root@123
+
+
+
